fixed z-index of checkboxes

--- a/src/assets/scss/_checkbox.scss
+++ b/src/assets/scss/_checkbox.scss
@@ -3,6 +3,7 @@
   position: absolute;
   top: 50%;
   right: -100px;
+  z-index: 100;
 
   width: 42px;
   height: 42px;
@@ -26,6 +27,7 @@
   position: absolute;
   top: 50%;
   right: -100px;
+  z-index: 100;
 
   width: 42px;
   height: 42px;
